Add codemirror for code input

--- a/index.html
+++ b/index.html
@@ -11,5 +11,7 @@
   <body>
     <div id="root"></div>
     <script src="./src/index.js" charset="UTF-8"></script>
+
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/codemirror@5.49.2/lib/codemirror.css">
   </body>
 </html>
